@@ -70,7 +70,7 @@ class MediaViewMediaList extends JView
 		if (isset($this->folders[$index])) {
 			$this->_tmp_folder = $this->folders[$index];
 		} else {
-			$this->_tmp_folder = new JStdClass();
+			$this->_tmp_folder = new JObject;
 		}
 	}
 
@@ -79,7 +79,7 @@ class MediaViewMediaList extends JView
 		if (isset($this->images[$index])) {
 			$this->_tmp_img = $this->images[$index];
 		} else {
-			$this->_tmp_img = new JStdClass;
+			$this->_tmp_img = new JObject;
 		}
 	}
 
@@ -88,7 +88,7 @@ class MediaViewMediaList extends JView
 		if (isset($this->documents[$index])) {
 			$this->_tmp_doc = $this->documents[$index];
 		} else {
-			$this->_tmp_doc = new JStdClass;
+			$this->_tmp_doc = new JObject;
 		}
 	}
 }
