@@ -20,7 +20,7 @@ defined('JPATH_BASE') or die();
  * @subpackage	Application
  * @since		1.5
  */
-abstract class JView extends JObject
+abstract class JView extends JClass
 {
 	/**
 	 * The name of the view
