@@ -1,0 +1,25 @@
+<?php
+/**
+ * @version		$Id$
+ * @package		Joomla.Framework
+ * @subpackage	Base
+ * @copyright	Copyright (C) 2005 - 2008 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License, see LICENSE.php
+  */
+
+/**
+ * Class, not directly instantiatable
+ *
+ * @package		Joomla.Framework
+ * @subpackage	Base
+ * @since		1.6
+ */
+ abstract class JClass extends JObject {
+ 	/**
+ 	 * construct
+ 	 * 
+ 	 * @access all 
+ 	 */
+ 	protected function __construct() {}	
+  	
+ }
