@@ -8,13 +8,13 @@
   */
 
 /**
- * Object class, allowing __construct in PHP4.
+ * Object class, directly instantiatable
  *
  * @package		Joomla.Framework
  * @subpackage	Base
  * @since		1.5
  */
-abstract class JObject extends JStdClass
+class JObject
 {
 
 	/**
@@ -25,36 +25,6 @@ abstract class JObject extends JStdClass
 	 * @since	1.0
 	 */
 	protected $_errors = array();
-
-	/**
-	 * Class constructor, overridden in descendant classes.
-	 *
-	 * @access	protected
-	 * @since	1.5
-	 */
-	protected function __construct() {}
-
-	/**
-	 * Provides interception of default php error handling logic for objects.  Enforceing class definitions
-	 *
-	 * @access	public
-	 * @throw Jexception
-	 * @since	1.6
- 	 */
-	public function __get($var) {
-		throw new JException('Attempted to access undefined object variable', 0, E_NOTICE, $var, true);
-	}
-
-	/**
-	 * Provides interception of default php error handling logic for objects.  Enforceing class definitions
-	 *
-	 * @access	public
-	 * @throw Jexception
-	 * @since	1.6
- 	 */
-	public function __set($var, $val) {
-		throw new JException('Attempted to set undefined object variable', 0, E_NOTICE, array($var, $val), true);
-	}
 
 	/**
 	 * Provides interception of default php error handling logic for objects.  Enforceing class definitions
@@ -68,19 +38,163 @@ abstract class JObject extends JStdClass
 	}
 	
 	/**
-	 * Modifies a property of the object, by default not creating the item.
-	 * Note: due to the way Jobject works if you try to create the item you
-	 * will get an error.
+	 * Returns a property of the object or the default value if the property is not set.
+	 *
+	 * @access	public
+	 * @param	string $property The name of the property
+	 * @param	mixed  $default The default value
+	 * @return	mixed The value of the property
+	 * @see		getProperties()
+	 * @since	1.5
+ 	 */
+	public function get($property, $default=null)
+	{
+		if(isset($this->$property)) {
+			return $this->$property;
+		}
+		return $default;
+	}
+	
+	/**
+	 * Returns an associative array of object properties
+	 *
+	 * @access	public
+	 * @param	boolean $public If true, returns only the public properties
+	 * @return	array
+	 * @see		get()
+	 * @since	1.5
+ 	 */
+	public function getProperties( $public = true )
+	{
+		$vars  = get_object_vars($this);
+		if($public)
+		{
+			foreach ($vars as $key => $value)
+			{
+				if ('_' == substr($key, 0, 1)) {
+					unset($vars[$key]);
+				}
+			}
+		}
+		return $vars;
+	}
+	
+	/**
+	 * Get the most recent error message
+	 *
+	 * @param	integer	$i Option error index
+	 * @param	boolean	$toString Indicates if JError objects should return their error message
+	 * @return	string	Error message
+	 * @access	public
+	 * @since	1.5
+	 */
+	public function getError($i = null, $toString = true )
+	{
+		// Find the error
+		if ( $i === null) {
+			// Default, return the last message
+			$error = end($this->_errors);
+		}
+		else
+		if ( ! array_key_exists($i, $this->_errors) ) {
+			// If $i has been specified but does not exist, return false
+			return false;
+		}
+		else {
+			$error	= $this->_errors[$i];
+		}
+
+		// Check if only the string is requested
+		if ( JError::isError($error) && $toString ) {
+			return $error->toString();
+		}
+
+		return $error;
+	}
+
+	/**
+	 * Return all errors, if any
+	 *
+	 * @access	public
+	 * @return	array	Array of error messages or JErrors
+	 * @since	1.5
+	 */
+	public function getErrors()
+	{
+		return $this->_errors;
+	}
+
+
+	/**
+	 * Modifies a property of the object, by default creating it if it does not already exist.
 	 *
 	 * @access	public
 	 * @param	string $property The name of the property
 	 * @param	mixed  $value The value of the property to set
-	 * @param  bool $create Create the item if it doesn't exist
+	 * @param  bool $create Create the item if it doesn't exist already
 	 * @return	mixed Previous value of the property
 	 * @see		setProperties()
 	 * @since	1.5
 	 */
-	public function set( $property, $value = null, $create = false ) {
-		parent::set($property, $value, $create);
+	public function set( $property, $value = null, $create = true )
+	{
+		$previous = isset($this->$property) ? $this->$property : null;
+		if(!isset($this->$property) && !$create) return null;
+		$this->$property = $value;
+		return $previous;
 	}
+
+	/**
+	* Set the object properties based on a named array/hash
+	*
+	* @access	protected
+	* @param	$array  mixed Either and associative array or another object
+	* @return	boolean
+	* @see		set()
+	* @since	1.5
+	*/
+	public function setProperties( $properties )
+	{
+		if(!is_array($properties)) {
+			if(!empty($properties)) {
+				$properties = (array) $properties; //cast to an array
+			} else return false;
+		}
+		if (is_array($properties))
+		{
+			foreach ($properties as $k => $v) {
+				$this->set($k, $v); // use the set function which might be overriden
+			}
+
+			return true;
+		}
+
+		return false;
+	}
+
+	/**
+	 * Add an error message
+	 *
+	 * @param	string $error Error message
+	 * @access	public
+	 * @since	1.0
+	 */
+	public function setError($error)
+	{
+		array_push($this->_errors, $error);
+	}
+
+	/**
+	 * Object-to-string conversion.
+	 * Each class can override it as necessary.
+	 *
+	 * @access	public
+	 * @return	string This name of this class
+	 * @since	1.5
+ 	 */
+	public function toString()
+	{
+		return get_class($this);
+	}
+
 }
