@@ -48,7 +48,7 @@ class plgButtonReadmore extends JPlugin
 
 		$doc->addScriptDeclaration($js);
 
-		$button = new JStdClass();
+		$button = new JObject;
 		$button->set('modal', false);
 		$button->set('onclick', 'insertReadmore(\''.$name.'\');return false;');
 		$button->set('text', JText::_('Readmore'));
